--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,54 @@
-argcomplete==3.1.4
-attrs==23.2.0
-Automat==22.10.0
-Babel==2.10.3
-bcrypt==3.2.2
-blinker==1.7.0
-certifi==2023.11.17
-chardet==5.2.0
-click==8.1.6
-cloud-init==24.3.1
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-constantly==23.10.4
-cryptography==41.0.7
-dbus-python==1.3.2
-distro==1.9.0
-distro-info==1.7+build1
-httplib2==0.20.4
-hyperlink==21.0.0
-idna==3.6
-incremental==22.10.0
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-netifaces==0.11.0
-oauthlib==3.2.2
-packaging==24.0
-pipx==1.4.3
-platformdirs==4.2.0
-psutil==5.9.8
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycurl==7.45.3
-Pygments==2.17.2
-PyGObject==3.48.2
-PyHamcrest==2.1.0
-PyJWT==2.7.0
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu3
-pytz==2024.1
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-service-identity==24.1.0
-setuptools==68.1.2
-six==1.16.0
-systemd-python==235
-Twisted==24.3.0
-typing_extensions==4.10.0
-ubuntu-pro-client==8001
-unattended-upgrades==0.1
-urllib3==2.0.7
-userpath==1.9.1
-wadllib==1.3.6
-wheel==0.42.0
-zope.interface==6.1
+asttokens==3.0.0
+attrs==25.3.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+comm==0.2.2
+debugpy==1.8.13
+decorator==5.2.1
+executing==2.2.0
+h11==0.14.0
+idna==3.10
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==2.2.4
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+pyzmq==26.3.0
+requests==2.32.3
+selenium==4.29.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+wcwidth==0.2.13
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+wsproto==1.2.0
