--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,13 @@ ipykernel==6.29.5
 ipython==9.0.2
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
+narwhals==1.38.0
 nest-asyncio==1.6.0
 numpy==2.2.4
 outcome==1.3.0.post0
@@ -30,6 +32,7 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
+plotly==6.0.1
 prompt_toolkit==3.0.50
 psutil==7.0.0
 ptyprocess==0.7.0
@@ -42,6 +45,8 @@ python-dotenv==1.0.1
 pytz==2025.1
 pyzmq==26.3.0
 requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.2
 seaborn==0.13.2
 selenium==4.29.0
 six==1.17.0
@@ -49,6 +54,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 stack-data==0.6.3
+threadpoolctl==3.6.0
 tornado==6.4.2
 traitlets==5.14.3
 trio==0.29.0
