--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ contourpy==1.3.1
 cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
+et_xmlfile==2.0.0
 executing==2.2.0
+fastjsonschema==2.21.1
 fonttools==4.56.0
 h11==0.14.0
 idna==3.10
@@ -17,14 +19,18 @@ ipython==9.0.2
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 narwhals==1.38.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.2.4
+openpyxl==3.1.5
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
@@ -44,7 +50,9 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 pyzmq==26.3.0
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.24.0
 scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
